fix: elements overflowing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,6 +11,7 @@
 body {
     font-family: 'Red Hat Display', sans-serif;
     color: var(--mainColor);
+    overflow: hidden;
 }
 
 #nowplaying {
